# henchman

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  TODO.md  run_example.sh  test.sh
example/: server.toml
example/tasks/: echo.task.toml  ps.task.toml  slow.task.toml
src/: interleave.rs  json.rs  json_conv.rs  lib.rs  main.rs  password.rs  server.rs  server_file.rs  task.rs  task_file.rs  utils.rs  web.rs
src/resources/: main.css  tasks.html
src/resources/modules/: api.mjs  html.mjs  task.mjs  tasks.mjs  utils.mjs
src/resources/tasks/: task.html
tests/: integration_test.rs
tests/resources/: server.toml
tests/resources/tasks/: example1.task.toml  param_boolean.task.toml  param_enum.task.toml  param_number.task.toml  param_required.task.toml
