[package]
name = "henchman"
version = "0.1.0"
authors = ["Robert Parsons <robert@dividezero.com>"]
edition = "2018"
default-run = "henchman"

[dependencies]
log = "0.4"
env_logger = "0.10"

getopts = "0.2"
lazy_static = "1.4"
either = "1.6"

regex = "1.3"

futures = { version = "0.3", features = ["default"] }

http = "0.2"
url = "2"

hyper = { version = "0.14", features = ["full"] }
#hyper = {version = "0.14", features = ["stream", "server", "client", "http1", "tcp"]}
#hyper = {version = "0.14", features = ["stream", "server", "client", "http1"]}

tokio = { version = "1.29", features = ["full", "test-util"] }
#tokio = { version = "1.29", features = ["fs", "io-util", "signal", "test-util", "macros", "rt-multi-thread", "process"] }
tokio-stream = { version = "0.1", features = ["full"] }

pin-project-lite = "0.2.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

toml = "0.7"

ring = "0.16"
hex = "0.4"
base64 = "0.21"
uuid = { version = "1.4", features = ["v4"] }

rpassword = "7.2"

[dev-dependencies]
pretty_assertions = "1.4"
backtrace = "0.3"

[[bin]]
name = "henchman"
path = "src/main.rs"

[[bin]]
name = "henchman-password"
path = "src/bin/henchman_password.rs"
